--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
 	"productName": "Satellite",
 	"version": "0.0.1",
 	"main": "main.js",
+	"type": "module",
 	"scripts": {
 		"dev": "NODE_ENV=dev electron .",
-		"build": "electron-builder build --config build.config.js --mac --linux --x64 --arm64 --publish never",
+		"build": "electron-builder build --config build.config.cjs --mac --linux --x64 --arm64 --publish never",
 		"deploy": "node deploy/index.js",
 		"format": "prettier -w ."
 	},
