--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "desktop",
+	"name": "@satellite-earth/desktop",
 	"productName": "Satellite",
 	"version": "0.0.1",
 	"main": "main.js",
