convert to typescript break actions into multiple classes

--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
 	"name": "@satellite-earth/desktop",
 	"productName": "Satellite",
 	"version": "0.0.1",
-	"main": "main.js",
+	"main": "dist/index.js",
 	"type": "module",
 	"scripts": {
-		"dev": "NODE_ENV=dev electron .",
-		"build": "electron-builder build --config build.config.cjs --mac --linux --x64 --arm64 --publish never",
-		"build-linux": "electron-builder build --config build.config.cjs --linux --x64 --arm64 --publish never",
+		"dev": "NODE_ENV=development electron .",
+		"build": "tsc",
+		"build-electron": "electron-builder build --config build.config.cjs --publish never",
+		"build-mac": "electron-builder --mac --x64 --arm64 --publish never",
+		"build-win": "electron-builder --win --x64 --arm64 --publish never",
+		"build-linux": "electron-builder --linux --x64 --arm64 --publish never",
+		"build-all": "electron-builder --linux --mac --win --x64 --arm64 --publish never",
 		"deploy": "node deploy/index.js",
 		"format": "prettier -w ."
 	},
@@ -19,21 +23,27 @@
 		"email": "sbowman@satellite.earth"
 	},
 	"license": "MIT",
+	"dependencies": {
+		"adm-zip": "^0.5.10",
+		"debug": "^4.3.4",
+		"electron-log": "^5.1.0",
+		"electron-updater": "^6.1.7",
+		"http-server": "^14.1.1",
+		"import-meta-resolve": "^4.1.0"
+	},
 	"devDependencies": {
 		"@aws-sdk/client-s3": "^3.502.0",
 		"@aws-sdk/lib-storage": "^3.502.0",
+		"@swc/core": "^1.4.17",
+		"@types/adm-zip": "^0.5.5",
+		"@types/node": "^20.12.7",
 		"concurrently": "^8.2.0",
 		"dotenv": "^16.4.1",
 		"electron": "^28.2.0",
-		"electron-builder": "^24.9.1",
+		"electron-builder": "^24.13.3",
 		"electron-rebuild": "^3.2.9",
 		"prettier": "^3.2.5",
+		"typescript": "^5.4.5",
 		"wait-on": "^7.2.0"
-	},
-	"dependencies": {
-		"adm-zip": "^0.5.10",
-		"electron-log": "^5.1.0",
-		"electron-updater": "^6.1.7",
-		"http-server": "^14.1.1"
 	}
 }
