--- a/package.json
+++ b/package.json
@@ -26,20 +26,19 @@
 	"dependencies": {
 		"adm-zip": "^0.5.10",
 		"debug": "^4.3.4",
-		"electron-log": "^5.1.0",
-		"electron-updater": "^6.1.7",
+		"electron-log": "^5.1.2",
+		"electron-updater": "^6.1.8",
 		"http-server": "^14.1.1",
 		"import-meta-resolve": "^4.1.0"
 	},
 	"devDependencies": {
 		"@aws-sdk/client-s3": "^3.502.0",
 		"@aws-sdk/lib-storage": "^3.502.0",
-		"@swc/core": "^1.4.17",
 		"@types/adm-zip": "^0.5.5",
 		"@types/node": "^20.12.7",
 		"concurrently": "^8.2.0",
 		"dotenv": "^16.4.1",
-		"electron": "^28.2.0",
+		"electron": "28.2.0",
 		"electron-builder": "^24.13.3",
 		"electron-rebuild": "^3.2.9",
 		"prettier": "^3.2.5",
