add menu option for debugger

--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
 	"devDependencies": {
 		"@aws-sdk/client-s3": "^3.502.0",
 		"@aws-sdk/lib-storage": "^3.502.0",
+		"@electron/rebuild": "^3.6.0",
 		"@types/adm-zip": "^0.5.5",
 		"@types/node": "^20.12.7",
 		"electron": "28.2.0",
 		"electron-builder": "^24.13.3",
-		"electron-rebuild": "^3.2.9",
 		"prettier": "^3.2.5",
 		"typescript": "^5.4.5"
 	}
