add tsc build step on dev

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "dist/index.js",
 	"type": "module",
 	"scripts": {
-		"dev": "NODE_ENV=development electron .",
+		"dev": "tsc && NODE_ENV=development electron .",
 		"build": "tsc",
 		"prebuild-mac": "yarn build",
 		"build-mac": "electron-builder --config build.config.cjs --mac --x64 --arm64 --publish never",
