--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
 	"scripts": {
 		"dev": "tsc && NODE_ENV=development electron .",
 		"build": "tsc",
-		"prebuild-mac": "yarn build",
+		"prebuild-mac": "pnpm build",
 		"build-mac": "electron-builder --config build.config.cjs --mac --x64 --arm64 --publish never",
-		"prebuild-win": "yarn build",
+		"prebuild-win": "pnpm build",
 		"build-win": "electron-builder --config build.config.cjs --win --x64 --arm64 --publish never",
-		"prebuild-linux": "yarn build",
+		"prebuild-linux": "pnpm build",
 		"build-linux": "electron-builder --config build.config.cjs --linux --x64 --arm64 --publish never",
-		"prebuild-all": "yarn build",
+		"prebuild-all": "pnpm build",
 		"build-all": "electron-builder --config build.config.cjs --linux --mac --win --x64 --arm64 --publish never",
 		"deploy": "node deploy/index.js",
 		"format": "prettier -w .",
