--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	"devDependencies": {
 		"@aws-sdk/client-s3": "^3.502.0",
 		"@aws-sdk/lib-storage": "^3.502.0",
+		"@changesets/cli": "^2.27.8",
 		"@types/adm-zip": "^0.5.5",
 		"@types/debug": "^4.1.12",
 		"@types/node": "^20.12.11",
