--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
 	"name": "@satellite-earth/desktop",
 	"productName": "Satellite",
 	"version": "0.3.0",
+	"private": true,
 	"main": "dist/index.js",
 	"type": "module",
 	"scripts": {
 		"dev": "tsc && NODE_ENV=development electron .",
 		"build": "tsc",
-		"prebuild-mac": "pnpm build",
-		"build-mac": "electron-builder --config build.config.cjs --mac --x64 --arm64 --publish never",
-		"prebuild-win": "pnpm build",
-		"build-win": "electron-builder --config build.config.cjs --win --x64 --arm64 --publish never",
+		"prebuild-macos": "pnpm build",
+		"build-macos": "electron-builder --mac --publish never",
+		"prebuild-windows": "pnpm build",
+		"build-windows": "electron-builder --win --publish never",
 		"prebuild-linux": "pnpm build",
-		"build-linux": "electron-builder --config build.config.cjs --linux --x64 --arm64 --publish never",
+		"build-linux": "electron-builder --linux --publish never",
 		"prebuild-all": "pnpm build",
-		"build-all": "electron-builder --config build.config.cjs --linux --mac --win --x64 --arm64 --publish never",
+		"build-all": "electron-builder --linux --mac --win --publish never",
 		"deploy": "node deploy/index.js",
 		"format": "prettier -w .",
 		"postinstall": "electron-builder install-app-deps"
@@ -29,7 +30,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@noble/hashes": "^1.4.0",
-		"@satellite-earth/personal-node": "^0.3.0",
+		"@satellite-earth/personal-node": "^0.4.0",
 		"adm-zip": "^0.5.10",
 		"debug": "^4.3.4",
 		"dotenv": "^16.4.5",
@@ -48,8 +49,9 @@
 		"@types/debug": "^4.1.12",
 		"@types/node": "^20.12.11",
 		"electron": "28.2.0",
-		"electron-builder": "^24.13.3",
+		"electron-builder": "^25.0.5",
 		"prettier": "^3.2.5",
 		"typescript": "^5.4.5"
-	}
+	},
+	"packageManager": "pnpm@9.6.0"
 }
