--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   release:
-    name: Release
+    name: Changesets
     runs-on: ubuntu-latest
     outputs:
       published: ${{ steps.changesets.outputs.published }}
