--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - name: Build app
+        run: pnpm build
+
       - name: Build Electron
         run: pnpm electron-builder
 
