--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -15,6 +15,8 @@ mac:
   category: public.app-category.social-networking
   icon: 'assets/icon.icns'
   darkModeSupport: true
+  # fixes issue with minimatch error: pattern is too long
+  mergeASARs: false
   # this is where we would add the tor binary
   # binaries: []
   target:
