only build universal for macos

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -21,7 +21,7 @@ mac:
   # binaries: []
   target:
     - target: dmg
-      arch: [universal, x64, armv7l, arm64]
+      arch: [universal, x64]
 
 linux:
   executableName: Satellite
