only use node-linker=hoisted in CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,12 @@ jobs:
           node-version: 20
           cache: 'pnpm'
 
+      # https://github.com/electron-userland/electron-builder/issues/6289#issuecomment-1042620422
+      # https://pnpm.io/npmrc#node-linker
+      - name: Create .npmrc
+        run: |
+          echo "node-linker=hoisted" >> .npmrc
+
       - name: Install Dependencies
         run: pnpm install
 
